src/main/webapp/css/fund-transfer.css
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : Feb 23, 2015, 12:22:06 PM
    Author     : rsee@visa.com
*/

// Open Sans Fonts
@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Light-webfont.eot');
    src: url('../fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/OpenSans-Light-webfont.woff') format('woff'),
         url('../fonts/Open_Sans/OpenSans-Light.ttf') format('truetype'),
         url('../fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
    font-weight: 300;
    font-style: normal;

}

@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Regular-webfont.eot');
    src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
         url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
         url('../fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
    font-weight: 400;
    font-style: normal;

}

@font-face {
    font-family: 'Open Sans';
    src: url('../fonts/OpenSans-Bold-webfont.eot');
    src: url('../fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/OpenSans-Bold-webfont.woff') format('woff'),
         url('../fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
         url('../fonts/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
    font-weight: 700;
    font-style: normal;

}

body {
    font-family: "Open Sans","Helvetica Neue","Helvetica","Arial","Verdana","sans-serif";
    padding-bottom: 100px;
}

.navbar-header {
    text-align: center;
}

.navbar-brand {
    float:none;
    display: block;
    letter-spacing: 2px;
    font-size: 24px;
}

nav.navbar {
    background: #FFF;
    padding: 0px 0 0 0;
    border: none;
    margin-bottom: 0px;
}

.navbar-toggle {
    float: left;
}

.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
    background-color: transparent;
}

.navbar-inverse .navbar-toggle .icon-bar {
    background-color: #797979;
    height: 3px;
}

.navbar-inverse .navbar-toggle {
    background-color: #FFF;
    border-color: #FFF;
}

.navbar-inverse .navbar-collapse {
    border: none;
}

#app-name {
    border-left: 1px solid #ddd;
    font-weight: 100;
    padding-left: 15px;
    margin-left: 15px;
}

.navbar-inverse a.navbar-brand:hover {
    color: #9d9d9d;
}

.navbar-brand .blue {
    color: #04d1c0;
}

.navbar-brand .grey {
    color: #8d8d8d;
}

.navbar-inverse .navbar-link {
    color: #0c91b2;
}

.navbar-inverse .navbar-link:hover {
    color: #0c91b2;
}


.jumbotron {
    padding-top: 0px;
    background-color: #015697;    
    margin-bottom: 0px;
}

.fund-transfer-steps {
    padding-top: 20px;
    padding-bottom: 0px;
}

.fund-transfer-steps .heading {
    margin-bottom: 20px;
    font-size: 26px;
}

.fund-transfer-steps .heading h1 {
    font-weight: 100;
    color: #69d9f5;
}

.fund-transfer-steps .heading span {
    font-weight: 100;
    color: #69d9f5;
}

.fund-transfer-steps .fa-stack.fa-lg{
    font-size: 5em;
}

.fund-transfer-steps h1 {
    font-size: 40px;
    font-weight: 100;
}

.fund-transfer-steps h2 {
    color: #088eb0;
}
.fund-transfer-steps .step {
    text-align: center;
    cursor: pointer;
}

.fund-transfer-steps h2, .fund-transfer-steps h3 {
    color: #fff;
    font-weight: 100;
    font-size: 22px;
}


.fund-transfer-form h3 {
    font-size: 24px;
    color: #858484;
    font-weight: 200;
    margin-bottom: 35px;
    display: inline;
}

.fund-transfer-form .step {
    display: block;
}

.fund-transfer-form .form-title {
    background: #015697;
    border: 1px solid #FFF;
    cursor: pointer;
}

.fund-transfer-form .form-title h3 {
    font-size: 18px;
    font-weight: 100;
    color: white;
}

.fund-transfer-form .form-content {
    padding-top: 15px;
    padding-bottom: 15px;
}

.btn-default.blue {
    border-color: #0c91b2;
    border: 2px solid #0c91b2;
    color: #0c91b2;
    padding: 5px 36px;
    margin-top: 10px;
}

.btn-default.blue:hover {
    color: #FFF;
    background: #0c91b2;
}

.btn-default.grey {
    border-color: #646464;
    border: 2px solid #646464;
    color: #646464;
    padding: 5px 36px;
    margin-top: 10px;
    margin-left: 5px;
}

.btn-default.grey:hover {
    color: #FFF;
    background: #646464; 
}

button.next-step {
    display: block;
    color: #858484;
    margin-top: 5px;
}

button.next-step:hover {
    text-decoration: none;
}

button.next-step span{
    position: relative;
    margin-right: 10px;
}

label {
    color: #6d6d6d;
    font-weight: 100;
    font-size: 18px;
}

.fund-transfer-form .form-title.active::after {
    position: relative;
    top: 0px;
    left: 25px;
    width: 0;
    height: 0;
    vertical-align: middle;
    content: " ";
    border-right: 10px solid transparent;
    border-bottom: 10px solid;
    border-left: 10px solid transparent;
    color: #FFF;
}

.carrot {
    position: relative;
    top: -20px;
    left: 15%;
    width: 0;
    height: 0;
    margin-left: -5px;
    vertical-align: middle;
    content: " ";
    border-right: 20px solid transparent;
    border-bottom: 20px solid;
    border-left: 20px solid transparent;
    color: #FFF;
    
    -moz-transition: left .4s; 
    -webkit-transition: left .4s;  
    -ms-transition: left .4s;  
    -o-transition: left .4s;  
    transition: left .4s;
    
    -webkit-transition-timing-function: ease-in; /* Safari and Chrome */
    transition-timing-function: ease-in;
}

.carrot.step1 {
    left: 15%;
}

.carrot.step2 {
    left: 49%;
}

.carrot.step3 {
    left: 82%;
}

.navmenu-default, .navbar-default .navbar-offcanvas {
    background: #444;
    border-color: #444;
}

.offcanvas {
    padding: 20px;
}

.offcanvas span.title {
    color: #FFF;
    font-size: 18px;
}

.offcanvas label {
    margin-top: 10px;
    color: #FFF;
    font-size: 14px;
}

.offcanvas textarea {
    height: 130px;
}

.view-code-button-wrapper {
    border: 0px solid #000;
    top: 50%;
    position: fixed;
    left: 0;
    z-index: 500;
    cursor: pointer;
    opacity: 0.5;
}

.view-code-button-wrapper.glow {
    box-shadow: 0 0 25px #10d1c5;
}

.view-code-button-wrapper div {
    display: inline-block;
    padding: 15px 10px;
    font-size: 18px;
}

.view-code-button-wrapper .arrow {
    background: #10d1c5;
    color: #FFF;
}

.view-code-button-wrapper .text {
    background: #fff;
    color: #0c91b2;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}

a.update-link {
    float: right;
    line-height: 28px;
}

.circle {
    background: transparent;
    border-radius: 70px;
    width: 120px;
    height: 120px;
    border: 5px solid #FFF;
    display: inline-block;
}

.circle.small {
    width: 40px;
    height: 40px;
    border-width: 2px;
    margin: 10px 10px 10px 0;
}

.fund-transfer-steps .step:hover .circle, .circle.active {
    background: #10d1c5;
}

.circle i {
    padding-top: 35px;
}

.circle.small i {
    padding-top: 10px;
    font-size: 1.5em;
}

.modal-header {
    border-bottom: none;
}

.modal-header h4 {
    font-weight: 200;
}

.modal-footer {
    border-top: none;
}

.navmenu, .navbar-offcanvas {
    width: 85%;
}

#navbar {
    background: #383838;
}

#navbar a {
    color: #FFF;
}

.progress-arrow {
    padding-top: 40px;
    padding-left: 0;
    padding-right: 0;
    visibility: hidden;
}

.progress-arrow.active {
    visibility: visible;
}

.step-arrow {
    text-align: center;
    font-size: 1.8em;
    opacity: 0.3;
    
    transition: opacity .25s ease-in-out;
    -moz-transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
}

.step-arrow.active {
    opacity: 1.0;
}

.step-arrow.inactive {
    opacity: 0.3;
}

#sender-info-widget {
    height: 127px;
    background: url(../images/visa_icon.png) no-repeat center;
}

#sender-info-widget.active, #sender-info-widget:hover {
    height: 127px;
    background: url(../images/visa_icon_active.png) no-repeat center;
}

#receiver-info-widget {
    height: 127px;
    background: url(../images/receivers_acct_icon.png) no-repeat center;
}

#receiver-info-widget.active, #receiver-info-widget:hover {
    height: 127px;
    background: url(../images/receivers_acct_icon_active.png) no-repeat center;
}

#money-info-widget {
    height: 127px;
    background: url(../images/money_icon.png) no-repeat center;
}

#money-info-widget.active, #money-info-widget:hover {
    height: 127px;
    background: url(../images/money_icon_active.png) no-repeat center;
}

.message {
    color: #FFF;
    padding: 20px 0;
    font-size: 18px;
    display: none;
    border-radius: 0px;
    
}

.message.success {
    background: #10d1c5;
    
}

.message.warning {
    background: #CE2A21;
}

span.error {
    color: #CE2A21;
    font-size: 16px;
}

input.error {
    color: #CE2A21;
    border-color: #CE2A21;
}

#sender_card_number, #receiver_card_number {
    border-right: none;
}

#sender_card_number + .input-group-addon,
#receiver_card_number + .input-group-addon{
    background: none;
}

#sender_card_number + .input-group-addon i.fa-check,
#receiver_card_number + .input-group-addon i.fa-check {
    color: #10d1c5;
}

#sender_card_number + .input-group-addon i.fa-times,
#receiver_card_number + .input-group-addon i.fa-times {
    color: #CE2A21;
}

#sender_card_number.error + .input-group-addon,
#receiver_card_number.error + .input-group-addon {
    border-color: #CE2A21;
}

.footer {
/*    position: absolute;
    bottom: 0;*/
    width: 100%;
    height: 60px;
    border-top: 1px solid #ddd;
    margin-top: 100px;
}

.footer > .container {
    padding-right: 15px;
    padding-left: 15px;
}

.container .text-muted {
    color: #9d9d9d;
    font-size: smaller;
    margin: 20px 0;
}

#transfer-fund-button, #clearTransfer {
    display: inline-block;
}

.read-only #transfer-fund-button, .read-only #clearTransfer, .read-only .input-group {
    display: none;
}

.read-only #make-another-transfer, .read-only #amount-read-only {
    display: block;
}

#make-another-transfer, #amount-read-only {
    display: none;
}

/* Extra small devices (phones, less than 768px) */
/* No media query since this is the default in Bootstrap */

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .message {
        border-radius: 4px;
    }

    #navbar {
        background: #FFF;
    }
    
    #navbar a {
        color: #0c91b2;
    }
    
    .fund-transfer-form .step {
        display: none;
    }
    
    .fund-transfer-form h3 {
        display: block;
    }
    
    .fund-transfer-form .form-content {
        padding-top: 0px;
        padding-bottom: 0px;
    }
    
    nav.navbar {
        padding: 20px 0 0 0;
        margin-bottom: 20px;
    }
    
    .navmenu, .navbar-offcanvas {
        width: 400px;
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .view-code-button-wrapper {
        opacity: 1.0;
    }

    .btn-default.blue {
        width: auto;
        margin-top: 0;
    }
    
    .btn-default.grey {
        width: auto;
        margin-top: 0;
    }
    
    .form-control-extra-padding {
        padding-top: 29px;
    }
    
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    
}

